--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-oauth2-client</artifactId>
     	</dependency> -->
+    	<dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.3.4</version>
+    </dependency>
 
 
 		<dependency>
@@ -40,6 +45,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+			<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<scope>provided</scope>
+	</dependency>
+		
 	</dependencies>
 
 	<build>
