--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 		<java.version>17</java.version>
 	</properties>
 		<dependencies>
+		
+		<dependency>
+      	<groupId>org.springframework.boot</groupId>
+      	<artifactId>spring-boot-starter-webflux</artifactId>
+    	</dependency>
 	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -28,6 +33,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+      <groupId>io.projectreactor</groupId>
+      <artifactId>reactor-test</artifactId>
+      <scope>test</scope>
+    </dependency>
 		
 		<!--  <dependency>
         	<groupId>org.springframework.boot</groupId>
