--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,17 @@
 			<scope>test</scope>
 		</dependency>
 		
+				<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
 			<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
