--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     	<dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
-        <version>4.3.4</version>
+        <version>4.5.13</version>
     </dependency>
 
 
@@ -73,6 +73,12 @@
 		<artifactId>lombok</artifactId>
 		<scope>provided</scope>
 	</dependency>
+	
+	<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.9.1</version>
+		</dependency>
 		
 	</dependencies>
 
