--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+		
 		<dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
@@ -43,7 +44,23 @@
 		<!--  <dependency>
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-oauth2-client</artifactId>
-    	</dependency> -->
+    	</dependency> 
+    		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>-->
+		<dependency>
+   		 <groupId>org.json</groupId>
+   		 <artifactId>json</artifactId>
+    	<version>20180813</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+		
     	<dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
