--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<dependency>           
+   <groupId>org.json</groupId>
+   <artifactId>json</artifactId>
+   <version>20201115</version>
+ </dependency>
+		
 				<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -73,6 +79,13 @@
 		<artifactId>lombok</artifactId>
 		<scope>provided</scope>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.9.1</version>
+	</dependency>
+
 		
 	</dependencies>
 
